--- a/Main/index.html
+++ b/Main/index.html
@@ -176,7 +176,8 @@
                         </div>
                     </div>
                     
-                    <div class="service-card" onclick="window.location.href=`../socialmediamarketing/socialmediamarketing.html`">
+                 <div class="service-card" onclick="window.open('../socialmediamarketing/socialmediamarketing.html', '_blank')">
+
                         <div class="service-icon">
                             <i class="fas fa-hashtag"></i>
                         </div>
@@ -192,7 +193,8 @@
                         </div>
                     </div>
                     
-                    <div class="service-card" onclick="window.location.href=`../webdesign/webdesign.html`">
+                   <div class="service-card" onclick="window.open('../webdesign/webdesign.html', '_blank')"> Web Design</div>
+
                         <div class="service-icon">
                             <i class="fas fa-code"></i>
                         </div>
