--- a/Main/index.html
+++ b/Main/index.html
@@ -13,11 +13,11 @@
 
   <div class="logo-intro" id="logoIntro">
     <div class="logo-container">
-      <img src="./preux_logo-removebg-preview (1).png" alt="Preux Logo" id="logoImage" />
+      <img src="./Untitled design.png" alt="Preux Logo" id="logoImage" />
       <div id="preuxText" class="text-reveal">
-    <span class="letter">P</span>
-    <span class="letter">r</span>
-    <span class="letter">e</span>
+    <span class="letter" style="color: rgb(14, 50, 130);">P</span>
+    <span class="letter" style="color: rgb(14, 50, 130);">r</span>
+    <span class="letter" style="color: rgb(14, 50, 130);">e</span>
     <span class="letter">u</span>
     <span class="letter">x</span>
   </div>
@@ -192,9 +192,8 @@
                             </ul>
                         </div>
                     </div>
-                    
-                   <div class="service-card" onclick="window.open('../webdesign/webdesign.html', '_blank')"> Web Design</div>
-
+                        </div>
+                        <div class="service-card"onclick="window.open('../webdesign/webdesign.html', '_blank')">
                         <div class="service-icon">
                             <i class="fas fa-code"></i>
                         </div>
@@ -206,6 +205,7 @@
                                 <li>E-commerce solutions</li>
                                 <li>Custom web applications</li>
                                 <li>API integrations</li>
+                            </ul>
                             </ul>
                         </div>
                     </div>
@@ -459,5 +459,21 @@
 
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js"></script>
+
+
+    <script>
+  const toggleBtn = document.querySelector('.sidebar-toggle');
+  const body = document.body;
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('sidebar-visible');
+  });
+
+  // Optional: Hide sidebar by default on load
+  window.addEventListener('DOMContentLoaded', () => {
+    body.classList.add('sidebar-hidden');
+  });
+</script>
+
 </body>
 </html>
