--- a/socialmediamarketing/socialmediamarketing.html
+++ b/socialmediamarketing/socialmediamarketing.html
@@ -22,7 +22,7 @@
   transform: translateX(-50%);
   z-index: 999;
 ">
-  <img style="width: 100px;" src="../Main/preux_logo-removebg-preview (1).png" alt="Logo">
+  <img style="width: 100px; height: 80px;" src="../Main/Untitled design.png" alt="Logo">
   <h1 style="
     margin: 0;
     font-size: 50px;
